--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,10 +1,10 @@
 <p class="lead">These are the locations near you.</p>
 <%= link_to("List view", locations_list_path, class: 'btn btn-primary') %>
 <hr>
-<div id="map"></div><br>
+<div id="listMap"></div><br>
 <script>
 function initMap() {
-  var map = new google.maps.Map(document.getElementById('map'), {
+  var map = new google.maps.Map(document.getElementById('listMap'), {
     zoom: 16,
     center: {lat: 1.3072052, lng: 103.831843},
   });
