--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -16,6 +16,7 @@
         <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
             <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+            <li><%= link_to "My Saved Locations", locations_mylocations_path %></li>
             <li><%= link_to "Logout", destroy_user_session_path, method:"delete" %></li>
         <% else %>
             <li><%= link_to "Signup", new_user_registration_path %></li>
