Amend Google Maps API script tag

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -165,5 +165,5 @@ function initMap() {
 }
 </script>
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAbRwB5MRYYe7V01n2_suO8lni8njzPYM&callback=initMap&libraries=places">
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAbRwB5MRYYe7V01n2_suO8lni8njzPYM&callback=initMap">
 </script>
