commented out es6

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -73,8 +73,8 @@
 <div id="showMap"></div>
 <script>
 $(document).ready(function(){
-  let copyButton = document.getElementById('d_clip_button')
-  let clip = new Clipboard(copyButton)
+  var copyButton = document.getElementById('d_clip_button')
+  var clip = new Clipboard(copyButton)
 
   $('#d_clip_button').tooltip({
     trigger: 'click',
