--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -2,9 +2,9 @@
   <div class="panel-heading clearfix">
       <h1 class="pull-left"><%= @location.name %></h1>
       <% if @saved_location %>
-        <%= link_to("Unsave Location", save_path(@location) , class: 'btn btn-default pull-right') %>
+        <%= link_to("Unsave Location", save_path(@location), class: 'btn btn-default pull-right') %>
       <% else %>
-        <%= link_to("Save Location", save_path(@location) , class: 'btn btn-primary pull-right') %>
+        <%= link_to("Save Location", save_path(@location), class: 'btn btn-primary pull-right') %>
       <% end %>
   </div>
   <div class="panel-body">
@@ -71,99 +71,16 @@
   </div>
 </div>
 <div id="showMap"></div>
+
+<%= javascript_include_tag 'password-copy' %>
 <script>
-$(document).ready(function(){
-  let copyButton = document.getElementById('d_clip_button')
-  let clip = new Clipboard(copyButton)
-
-  $('#d_clip_button').tooltip({
-    trigger: 'click',
-    placement: 'bottom'
-  })
-
-  function setTooltip(btn, message) {
-    $(btn).tooltip('hide')
-    .attr('data-original-title', message)
-    .tooltip('show')
+  destinationLatLng = {
+    lat: <%= @location.lat %>,
+    lng: <%= @location.lng %>
   }
-
-  function hideTooltip(btn) {
-    setTimeout(function() {
-      $(btn).tooltip('hide')
-    }, 1000)
-  }
-
-  clip.on('success', function(e) {
-    setTooltip(e.trigger, 'Copied!')
-    hideTooltip(e.trigger)
-  })
-
-  clip.on('error', function(e) {
-    setTooltip(e.trigger, 'Failed!')
-    hideTooltip(e.trigger)
-  })
-})
 </script>
+<%= javascript_include_tag 'show-map' %>
 
-<script>
-function initMap() {
-  var map = new google.maps.Map(document.getElementById("showMap"), {
-    zoom: 16,
-    center: {
-      lat: 1.3072052,
-      lng: 103.831843
-    }
-  });
-  var markerArray = [];
-  var stepDisplay = new google.maps.InfoWindow;
-  function attachInstructionText(stepDisplay, marker, text, map) {
-      google.maps.event.addListener(marker, 'click', function() {
-      stepDisplay.setContent(text);
-      stepDisplay.open(map, marker);
-    });
-  }
-  function showSteps(directionResult, markerArray, stepDisplay, map) {
-    for (var i = 0; i < markerArray.length; i++) {
-      markerArray[i].setMap(null);
-    }
-    var myRoute = directionResult.routes[0].legs[0];
-    for (var j = 0; j < myRoute.steps.length; j++) {
-      var marker = markerArray[j] = markerArray[j] || new google.maps.Marker;
-        marker.setMap(map);
-        marker.setPosition(myRoute.steps[j].start_location);
-        attachInstructionText(stepDisplay, marker, myRoute.steps[j].instructions, map);
-    }
-  }
-  if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(function (position) {
-      var pos = {
-        lat: position.coords.latitude,
-        lng: position.coords.longitude
-      };
-      map.setCenter(pos);
-      var coords = new google.maps.LatLng(pos);
-      var directionsService = new google.maps.DirectionsService();
-      var directionsDisplay = new google.maps.DirectionsRenderer();
-      directionsDisplay.setMap(map);
-      var request = {
-        origin: coords,
-        destination: {
-          lat: <%= @location.lat %>,
-          lng: <%= @location.lng %>
-        },
-        travelMode: google.maps.DirectionsTravelMode.WALKING
-      };
-
-      directionsService.route(request, function (response, status) {
-        if (status == google.maps.DirectionsStatus.OK) {
-          directionsDisplay.setDirections(response);
-          showSteps(response, markerArray, stepDisplay, map);
-        }
-      });
-    });
-  }
-}
-</script>
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAbRwB5MRYYe7V01n2_suO8lni8njzPYM&callback=initMap">
 </script>
