Add map controls

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -16,10 +16,11 @@
 </div>
 <hr>
 
+<input id="pac-input" class="controls" type="text" placeholder="Search another location!">
 <div id="listMap"></div><br>
 
 <%= javascript_include_tag 'views' %>
 
 <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAbRwB5MRYYe7V01n2_suO8lni8njzPYM&callback=initMap">
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAbRwB5MRYYe7V01n2_suO8lni8njzPYM&callback=initMap&libraries=places">
 </script>
