combining map and list views work in progress

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -5,7 +5,7 @@
 
 <a href="#" class="btn btn-sm btn-default button-wifi">wifi</a>
 <a href="#" class="btn btn-sm btn-default button-aircon">aircon</a>
-<a href="#" class="btn btn-sm btn-default button-sockets">sockets</a>
+<a href="#" class="btn btn-sm btn-default button-availsockets">sockets</a>
 <a href="#" class="btn btn-sm btn-default" data-toggle="collapse" data-target="#collapseOne">more filters</a>
 <div id="collapseOne" class="panel-collapse collapse">
   <div class="panel-body">
@@ -16,7 +16,9 @@
 </div>
 <hr>
 
+<div id="listCards hidden"> Cards View</div>
 <div id="listMap"></div><br>
+
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAbRwB5MRYYe7V01n2_suO8lni8njzPYM&callback=initMap">
 </script>
