--- a/app/views/locations/list_view.html.erb
+++ b/app/views/locations/list_view.html.erb
@@ -15,6 +15,7 @@
 <hr>
 
 <% @locations.each do |location| %>
+<div class="well location-card row
     <% if location['wifi'] %> wifi <% end %>
     <% if location['aircon'] %> aircon <% end %>
     <% if location['available_sockets'] > 0 %> sockets <% end %>
