--- a/app/views/locations/mylocations.html.erb
+++ b/app/views/locations/mylocations.html.erb
@@ -1,6 +1,6 @@
 <p class="lead">These are the locations that you've saved.</p>
 <hr>
-<% @locations.each do |location| %>
+<% @locations.zip(@saved_locations).each do |location, saved_location| %>
   <div class="panel panel-default">
     <div class="panel-body">
       <h3><%= link_to(location.name, location) %></h3>
@@ -12,7 +12,12 @@
       <% end %>
     </div>
     <div class="panel-footer">
-      <%= link_to("Unsave Location", save_path(location) , class: 'btn btn-default') %>
+      <%= link_to("Unsave Location", save_path(location), class: 'btn btn-default') %>
+      <% if saved_location.is_watched %>
+        <%= link_to("Unwatch Location", watch_path(location), class: 'btn btn-default') %>
+      <% else %>
+        <%= link_to("Watch Location", watch_path(location), class: 'btn btn-primary') %>
+      <% end %>
     </div>
   </div>
 <% end %>
