able to watch location only if no seats are available

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -5,7 +5,9 @@
         <% if @saved_location.is_watched %>
           <%= link_to("Unwatch Location", watch_path(@location) , class: 'btn btn-default pull-right') %>
         <% else %>
+          <% if @location.available_seats<=0 %>
           <%= link_to("Watch Location", watch_path(@location) , class: 'btn btn-primary pull-right') %>
+          <% end %>
         <% end %>
         <%= link_to("Unsave Location", save_path(@location) , class: 'btn btn-default pull-right') %>
       <% else %>
