--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,5 +1,5 @@
 <p class="lead">These are the locations near you.</p>
-<button id="get_list_view" class="btn btn-primary">List View</button>
+<button id="switch-views" class="btn btn-primary">List View</button>
 
 <hr>
 
@@ -16,7 +16,7 @@
 </div>
 <hr>
 
-<div id="listCards hidden"> Cards View</div>
+<div id="listCards" class="hidden"> Cards View</div>
 <div id="listMap"></div><br>
 
 <input id="pac-input" class="controls" type="text" placeholder="Search another location!">
