--- a/app/views/locations/list.html.erb
+++ b/app/views/locations/list.html.erb
@@ -16,38 +16,46 @@
 
 <% @locations.each do |location| %>
 <div class="well location-card row
-    <% if location['wifi'] %> wifi <% end %>
-    <% if location['aircon'] %> aircon <% end %>
-    <% if location['available_sockets'] > 0 %> sockets <% end %>
-    <% if location['coffee'] %> coffee <% end %>
-    <% if location['quiet'] %> quiet <% end %>
-    <% if (location['available_seats'].to_f/location['total_seats'].to_f) > 0.3 %> uncrowded <% end %>
+    <% if location.wifi %> wifi <% end %>
+    <% if location.aircon %> aircon <% end %>
+    <% if location.available_sockets > 0 %> sockets <% end %>
+    <% if location.coffee %> coffee <% end %>
+    <% if location.quiet %> quiet <% end %>
+    <% if (location.available_seats.to_f/location.total_seats.to_f) > 0.3 %> uncrowded <% end %>
   ">
   <div class="col-xs-5 col-md-3 location-card-img">
     
-    
+    <% if location.cloudinary_link %>
+    <img src='<%= location.cloudinary_link %>' alt="" class='img-responsive img-rounded center-block'>
+    <% else %>
+    <img src="http://placehold.it/300x300" alt="" class='img-responsive img-rounded center-block'>
+    <% end %>
     <span class="label label-default">5min away</span>
   </div>
   <div class="col-xs-7 col-md-9">
-    <h3><%= link_to(location['name'], location) %></h3>
-    <%= location['vicinity']  %>
+    <h3><%= link_to(location.name, location) %></h3>
+    <%= location.vicinity  %>
     <hr>
-    <% if location['wifi'] %> wifi <% end %>
-    <% if location['aircon'] %> aircon <% end %>
-    <% if location['available_sockets'] > 0 %> sockets <% end %>
-    <% if location['coffee'] %> coffee <% end %>
-    <% if location['quiet'] %> quiet <% end %>
-    <% if (location['available_seats'].to_f/location['total_seats'].to_f) > 0.3 %> uncrowded <% end %>
+    <% if location.wifi %> wifi <% end %>
+    <% if location.aircon %> aircon <% end %>
+    <% if location.available_sockets > 0 %> sockets <% end %>
+    <% if location.coffee %> coffee <% end %>
+    <% if location.quiet %> quiet <% end %>
+    <% if (location.available_seats.to_f/location.total_seats.to_f) > 0.3 %> uncrowded <% end %>
     <hr>
-    <%= location['distance'].to_i %> metres away
-    <hr>
-    <p class="label label-default"><%= "#{location['available_seats']} seats available" %></p>
-    <p class="label label-default"><%= "#{location['available_sockets']} sockets available" %></p>
-    <% if (location['available_seats'].to_f / location['total_seats'].to_f <= 0.2) %>
+    <p class="label label-default"><%= "#{location.available_seats} seats available" %></p>
+    <p class="label label-default"><%= "#{location.available_sockets} sockets available" %></p>
+    <% if (location.available_seats.to_f / location.total_seats.to_f <= 0.2) %>
     <p class="label label-warning">Crowded</p>
     <% end %>
       <hr>
+      <% if SavedLocation.find_by(user_id: current_user.id, location_id: location.id) != nil %>
+        <%= link_to("Unsave Location", save_path(location) , class: 'btn btn-default') %>
+      <% else %>
+        <%= link_to("Save Location", save_path(location) , class: 'btn btn-primary') %>
+      <% end %>
     </div>
+
 </div>
 <% end %>
 
