Add change location feature

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -16,7 +16,7 @@
 </div>
 <hr>
 
-<input id="pac-input" class="controls" type="text" placeholder="Search another location!">
+<input id="pac-input" class="controls" type="text" size="50" placeholder="Search another location!">
 <div id="listMap"></div><br>
 
 <%= javascript_include_tag 'views' %>
