--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,19 +27,6 @@
   width: 100%;
 }
 
-#showMapPanel {
-  position: absolute;
-  top: 10px;
-  left: 25%;
-  z-index: 5;
-  background-color: #fff;
-  padding: 5px;
-  border: 1px solid #999;
-  text-align: center;
-  line-height: 30px;
-  padding-left: 10px;
-}
-
 .alert {
   margin-top: -20px;
 }
@@ -47,6 +34,15 @@
 .navbar {
   margin-top: 0;
   border-radius: 0;
+}
+
+#pac-input {
+  font-family: 'Arial', sans-serif;
+  font-size: 13px;
+  text-align: center;
+  margin-top: 10px;
+  padding: 12px;
+
 }
 
 .location-card {
