clear filters button added

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -3,16 +3,16 @@
 
 <hr>
 
-<a href="#" class="btn btn-sm btn-default button-wifi">wifi</a>
-<a href="#" class="btn btn-sm btn-default button-aircon">aircon</a>
-<a href="#" class="btn btn-sm btn-default button-availsockets">sockets</a>
-<a href="#" class="btn btn-sm btn-default" data-toggle="collapse" data-target="#collapseOne">more filters</a>
-<div id="collapseOne" class="panel-collapse collapse">
-  <div class="panel-body">
-    <a href="#" class="btn btn-sm btn-default button-coffee">coffee</a>
-    <a href="#" class="btn btn-sm btn-default button-quiet">quiet</a>
-    <a href="#" class="btn btn-sm btn-default button-uncrowded">uncrowded</a>
-  </div>
+<a class="btn btn-sm btn-default button-wifi">wifi</a>
+<a class="btn btn-sm btn-default button-aircon">aircon</a>
+<a class="btn btn-sm btn-default button-availsockets">sockets</a>
+<a class="btn btn-sm btn-default" data-toggle="collapse" data-target="#collapseOne">more filters</a>
+<div id="collapseOne" class="collapse">
+  <br>
+  <a class="btn btn-sm btn-default button-coffee">coffee</a>
+  <a class="btn btn-sm btn-default button-quiet">quiet</a>
+  <a class="btn btn-sm btn-default button-uncrowded">uncrowded</a>
+  <a class="btn btn-sm btn-default button-clearfilters">clear filters</a>
 </div>
 <hr>
 
