more filters button toggle to less filters button

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -6,7 +6,7 @@
 <a class="btn btn-sm btn-default button-wifi">wifi</a>
 <a class="btn btn-sm btn-default button-aircon">aircon</a>
 <a class="btn btn-sm btn-default button-availsockets">sockets</a>
-<a class="btn btn-sm btn-default" data-toggle="collapse" data-target="#collapseOne">more filters</a>
+<a class="btn btn-sm btn-default button-morefilters" data-toggle="collapse" data-target="#collapseOne">more filters</a>
 <div id="collapseOne" class="collapse">
   <br>
   <a class="btn btn-sm btn-default button-coffee">coffee</a>
