--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,5 +1,5 @@
 <p class="lead">These are the locations near you.</p>
-<button id="switch-views" class="btn btn-primary">List View</button>
+<button id="switch-views" class="btn btn-default">List View</button>
 
 <hr>
 
