--- a/app/views/locations/mylocations.html.erb
+++ b/app/views/locations/mylocations.html.erb
@@ -1,5 +1,5 @@
 <p class="lead">These are the locations that you've saved.</p>
-<%= link_to("Unwatch All Locations", unwatch_all_path(current_user.id), class: 'btn btn-primary') %>
+<%= link_to("Unwatch All Locations", unwatch_all_path(current_user.id), class: 'btn btn-default') %>
 <hr>
 <% @locations.zip(@saved_locations).each do |location, saved_location| %>
   <div class="panel panel-default">
@@ -11,12 +11,15 @@
       <% if (location.available_seats.to_f / location.total_seats.to_f <= 0.2) %>
         <p class="label label-warning">Crowded</p>
       <% end %>
+      <br>
+      <br>
+      <%= link_to("View Details", location_path(location), class: 'btn btn-default') %>
     </div>
     <div class="panel-footer">
       <% if saved_location.is_watched %>
         <%= link_to("Unwatch Location", watch_path(location), class: 'btn btn-default') %>
       <% else %>
-        <%= link_to("Watch Location", watch_path(location), class: 'btn btn-primary') %>
+        <%= link_to("Watch Location", watch_path(location), class: 'btn btn-default') %>
       <% end %>
       <%= link_to("Unsave Location", save_path(location), class: 'btn btn-default') %>
     </div>
