--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse navbar-default">
+<div class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -11,7 +11,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <% if current_user %>
-            <p class="navbar-text"><%= "Signed in as #{current_user.first_name} #{current_user.last_name}" %></p>
+            <p class="navbar-text label label-nav"><%= "Signed in as #{current_user.first_name} #{current_user.last_name}" %></p>
         <% end %>
         <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
@@ -19,8 +19,8 @@
             <li><%= link_to "My Saved Locations", locations_mylocations_path %></li>
             <li><%= link_to "Logout", destroy_user_session_path, method:"delete" %></li>
         <% else %>
-            <li><%= link_to "Signup", new_user_registration_path %></li>
-            <li><%= link_to "Login", new_user_session_path %></li>
+            <li><%= link_to "Log In", new_user_session_path %></li>
+            <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <% end %>
         </ul>
     </div>
