--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,7 +88,7 @@ $navbar-default-link-color: #877a87;
     width: 100%;
     height: 100%;
     max-height: 300px;
-    o-object-fit: cover;
+    object-fit: cover;
   }
   h3 {
     margin-top: 0;
