--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -16,12 +16,12 @@
 </div>
 <hr>
 
-<input id="pac-input" class="controls" type="text" size="50" placeholder="Search another location!">
-
 <div id="listCards" class="hidden"></div>
 
-<div id="listMap"></div><br>
+<input id="pac-input" class="controls" type="text" size="50" placeholder="Search another location!">
 
+<div id="listMap"></div>
+<!-- <a id="geolocate" class="btn btn-default">Get current location</a> -->
 <%= javascript_include_tag 'views' %>
 
 <script async defer
