--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,10 +20,10 @@
     </div>
 
     <div class="field">
+      <%= f.password_field :password, autocomplete: "off" %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "off" %>
     </div>
 
     <div class="field">
@@ -31,9 +31,10 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Sign up" %>
+      <%= f.submit "Sign up", class: 'btn btn-default' %>
+      <span class="pull-right">
+        <%= render "devise/shared/links" %>
+      </span>
     </div>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 </div>
