--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -3,11 +3,12 @@
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
+        <span>Menu</span><span class="caret"></span>
+<!--         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> -->
       </button>
-      <%= link_to "WhereWork", root_path, class: 'navbar-brand' %>
+      <%= image_tag("logo.png", class: 'navbar-brand') %>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <% if current_user %>
