--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,7 @@ $navbar-default-link-color: #877a87;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.info-icon {
+.info-icon, img.location-card.info-icon {
   height: 50px;
   width: 50px;
   background-color: $body-bg;
@@ -82,6 +82,9 @@ $navbar-default-link-color: #877a87;
   .navbar-text {
     color: #fff;
   }
+  .navbar-brand {
+    padding: 5px;
+  }
 }
 
 #pac-input {
@@ -106,7 +109,6 @@ $navbar-default-link-color: #877a87;
     padding: 20px;
   }
   img {
-    width: 100%;
     height: 100%;
     max-height: 300px;
     object-fit: cover;
