--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -27,3 +27,42 @@
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAbRwB5MRYYe7V01n2_suO8lni8njzPYM&callback=initMap&libraries=places">
 </script>
+
+<script>
+  let coffeeIcon = `
+  <div class='col-xs-3'>
+    <%= image_tag("coffee-cup.svg", class: 'info-icon img-responsive center-block') %>
+    <p class='info-text text-center'>Coffee</p>
+  </div>
+  `
+  let airconIcon = `
+  <div class='col-xs-3'>
+    <%= image_tag("air-conditioner.svg", class: 'info-icon img-responsive center-block') %>
+    <p class='info-text text-center'>Air-Con</p>
+  </div>
+  `
+  let socketsIcon = `
+  <div class='col-xs-3'>
+    <%= image_tag("plug.svg", class: 'info-icon img-responsive center-block') %>
+    <p class='info-text text-center'>Sockets</p>
+  </div>
+  `
+  let uncrowdedIcon = `
+  <div class='col-xs-3'>
+    <%= image_tag("employees.svg", class: 'info-icon nil-icon img-responsive center-block') %>
+    <p class='info-text text-center'>Uncrowded</p>
+  </div>
+  `
+  let quietIcon = `
+  <div class='col-xs-3'>
+    <%= image_tag("speaker-1.svg", class: 'info-icon img-responsive center-block') %>
+    <p class='info-text text-center'>Quiet</p>
+  </div>
+  `
+  let wifiIcon = `
+  <div class='col-xs-3'>
+    <%= image_tag("wifi.svg", class: 'info-icon img-responsive center-block') %>
+    <p class='info-text text-center'>Wifi</p>
+  </div>
+  `
+</script>
