added back button to show location details

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -16,6 +16,8 @@
           <%= link_to("Watch and Save Location", watch_path(@location) , class: 'btn btn-default pull-right') %>
         <% end %>
       <% end %>
+      <span class="col-xs-1 pull-right"></span>
+      <%= link_to 'Back', :back, class: 'btn btn-default pull-right' %>
     </div>
     <div class="panel-body">
         <div class="col-md-4">
