--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -18,7 +18,9 @@
 
 <div id="listCards" class="hidden"></div>
 
-<input id="pac-input" class="controls" type="text" size="40" placeholder="Search another location!">
+<div id="mapInputs">
+  <input id="pac-input" class="controls" type="text" size="40" placeholder="Search another location!">
+</div>
 
 <div id="listMap"></div>
 
