put all views into containers and removed container wrapper div from main layout file

--- a/app/views/locations/mylocations.html.erb
+++ b/app/views/locations/mylocations.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p class="lead">These are the locations that you've saved.</p>
 <%= link_to("Unwatch All Locations", unwatch_all_path(current_user.id), class: 'btn btn-default') %>
 <hr>
@@ -27,3 +28,4 @@
     </div>
   </div>
 <% end %>
+</div>
