--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>Edit Profile</h2>
 <hr>
 <div class="well col-md-6 col-md-offset-3">
@@ -51,4 +52,5 @@
   <% end %>
 
 
+</div>
 </div>
