--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>Sign up</h2>
 <hr>
 <div class="well col-md-6 col-md-offset-3">
@@ -37,4 +38,5 @@
       </span>
     </div>
   <% end %>
+</div>
 </div>
