--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="col-md-6 col-md-offset-3 well">
   <%= bootstrap_form_for(@location) do |f| %>
     <h2>Edit location information for <%= @location.name %></h2>
@@ -7,4 +8,5 @@
     <%= f.text_field :wifi_password if @location.wifi %>
     <%= f.submit "Update" %>
   <% end %>
+</div>
 </div>
