--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <p class="lead">These are the locations near you.</p>
 <button id="switch-views" class="btn btn-default">List View</button>
 <button id="filter-toggle" class="btn btn-default">Show Filters</button>
@@ -39,6 +40,7 @@
 <div id="listCards"></div>
 
 <input id="pac-input" class="controls" type="text" size="40" placeholder="Search another location!">
+</div>
 
 <div id="listMap"></div>
 
