--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="panel panel-default">
     <div class="panel-heading clearfix">
       <h1 class="pull-left"><%= @location.name %></h1>
@@ -122,7 +123,7 @@
     </div>
     <div id="showMap"></div>
 </div>
-
+</div>
 
 
 <%= javascript_include_tag 'password-copy' %>
