--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -2,8 +2,8 @@
   <%= bootstrap_form_for(@location) do |f| %>
     <h2>Edit location information for <%= @location.name %></h2>
     <hr>
-    <%= f.text_field :available_seats %>
-    <%= f.text_field :available_sockets %>
+    <%= f.number_field :available_seats, options = {:min => 0}  %>
+    <%= f.number_field :available_sockets, options = {:min => 0}  %>
     <%= f.text_field :wifi_password if @location.wifi %>
     <%= f.submit "Update" %>
   <% end %>
