changed uncrowded icon and icon implementation

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -71,7 +71,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAbRwB5MRYYe7V01n2_suO8ln
   `
   let uncrowdedIcon = `
   <div class='col-xs-3'>
-    <%= image_tag("employees.svg", class: 'info-icon nil-icon img-responsive center-block') %>
+    <%= image_tag("employees.svg", class: 'info-icon img-responsive center-block') %>
     <p class='info-text text-center'>Uncrowded</p>
   </div>
   `
