--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -42,6 +42,7 @@
 <div id="mapInputs">
   <input id="pac-input" class="controls" type="text" size="40" placeholder="Search another location!">
 </div>
+</div>
 
 <div id="listMap"></div>
 
